# seek

./: .gitignore  Cargo.toml  LICENSE  README.md  create_eicar.py  test-downloads-scan.json  test-result.json
.claude/: settings.local.json
.github/workflows/: release.yml
benches/: detection_benchmark.rs  scan_benchmark.rs
docs/: README.md  architecture.md  cli-interface.md  components.md  libraries.md  project-structure.md
manual/: advanced-usage.md  basic-usage.md  feature-overview.md  getting-started.md
seek-aarch64-apple-darwin/: seek-aarch64-apple-darwin
seek-x86_64-apple-darwin/: seek-x86_64-apple-darwin
seek-x86_64-unknown-linux-gnu/: seek-x86_64-unknown-linux-gnu
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/cli/commands/: config.rs  mod.rs  monitor.rs  quarantine.rs  report.rs  scan.rs  schedule.rs  status.rs  update.rs
src/data/config/: mod.rs
src/data/models/: config.rs  mod.rs  scan_result.rs  threat.rs
src/data/storage/: mod.rs
src/engine/: mod.rs
src/engine/detection/: heuristic_scanner.rs  mod.rs  signature_scanner.rs
src/engine/filesystem/: file_analyzer.rs  file_watcher.rs  mod.rs  path_handler.rs
src/engine/signature/: mod.rs
src/services/: config_service.rs  mod.rs  monitor_service.rs  quarantine_service.rs  report_service.rs  scanner_service.rs  schedule_service.rs  scheduler_service.rs  status_service.rs  update_service.rs
src/utils/: mod.rs
tests/integration/: cli_tests.rs  scan_tests.rs
