[package]
name = "seek"
version = "0.0.1"
edition = "2021"
authors = ["seung <everestfesf@gmail.com>"]
description = "고성능 Rust 백신 CLI 도구 - 메모리 안전성과 성능을 활용한 현대적인 백신 솔루션"
license = "MIT"
repository = "https://github.com/TechieQuokka/seek"
readme = "README.md"
keywords = ["antivirus", "security", "malware", "cli", "rust"]
categories = ["command-line-utilities", "security"]

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
dialoguer = "0.11"
console = "0.15"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"

# File System
notify = "6.1"
notify-debouncer-mini = "0.4"
walkdir = "2.4"
glob = "0.3"

# Antivirus & Security (optional features, disabled by default for compilation)
# clamav-rs = { version = "0.5", optional = true }
# clamav-sys = { version = "1.0", optional = true }
# clamav-client = { version = "0.1", optional = true }
# virustotal-rs = { version = "0.3", optional = true }
# vt3 = { version = "0.9", optional = true }
# yara = { version = "0.23", optional = true }

# Security & Crypto
sha2 = "0.10"
md-5 = "0.10"
blake3 = "1.5"
regex = "1.10"
aho-corasick = "1.1"

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

# Additional dependencies for compilation
uuid = { version = "1.6", features = ["v4", "serde"] }
num_cpus = "1.16"
hex = "0.4"

# Time & Scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UI & Output
tabled = "0.14"
indicatif = "0.17"
colored = "2.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json"], optional = true }

# Binary Analysis
goblin = "0.8"
pelite = { version = "0.10", optional = true }
elf = { version = "0.7", optional = true }

# Additional useful dependencies - only what we actually use
memmap2 = "0.9"  # Memory mapping for efficient large file processing
mime_guess = "2.0"  # MIME type detection

# Compression
flate2 = "1.0"
zip = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
# Additional testing tools - only what we actually use
serial_test = "3.0"  # Sequential test execution
rand = "0.8"  # Random data generation for benchmarks

[[bin]]
name = "seek"
path = "src/main.rs"

[[test]]
name = "cli_tests"
path = "tests/integration/cli_tests.rs"

[[test]]
name = "scan_tests"
path = "tests/integration/scan_tests.rs"

[features]
default = []
# clamav = ["clamav-rs", "clamav-sys", "clamav-client"]
# virustotal = ["virustotal-rs", "vt3", "reqwest"]
yara-support = [] # Add yara support feature flag
binary-analysis = ["pelite", "elf"]
database = ["sqlx"]
compression = ["zip"]
integration-tests = []  # Enable integration tests
# full = ["clamav", "virustotal", "yara-support", "binary-analysis", "database", "compression"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true